@@ -10,32 +10,23 @@ import org.mapstruct.Named;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring", imports = List.class)
 public interface TokenResourceMapper {
 
-    @Mapping(target = "legals",  expression = "java(toLegalsResponse(tokens))")
+    @Mapping(target = "legals", source = ".", qualifiedByName = "toLegalsResponse")
     TokenResource toResponse(TokenOnboardedUsers tokens);
 
     @Named("toLegalsResponse")
     default List<LegalsResource> toLegalsResponse(TokenOnboardedUsers tokenOnboardedUsers){
-        List<LegalsResource> legalsResponses = new ArrayList<>();
-        for(UserProducts user: tokenOnboardedUsers.getOnboardedUsers()){
-            List<LegalsResource> list = user.getBindings().stream()
-                    .filter(userBinding -> tokenOnboardedUsers.getInstitutionId().equalsIgnoreCase(userBinding.getInstitutionId()))
-                    .flatMap(userBinding -> userBinding.getProducts().stream())
-                    .filter(onboardedProduct -> tokenOnboardedUsers.getProductId().equalsIgnoreCase(onboardedProduct.getProductId()))
-                    .filter(onboardedProduct -> tokenOnboardedUsers.getId().equals(onboardedProduct.getTokenId()))
-                    .map(product -> {
+        return tokenOnboardedUsers.getUsers().stream()
+                    .map(user -> {
                         LegalsResource legalsResponse = new LegalsResource();
-                        legalsResponse.setPartyId(user.getId());
-                        legalsResponse.setEnv(product.getEnv());
-                        legalsResponse.setRole(product.getRole());
+                        legalsResponse.setPartyId(user.getUserId());
+                        legalsResponse.setRole(user.getRole());
                         return legalsResponse;
-                    }).collect(Collectors.toList());
-            legalsResponses.addAll(list);
-        }
-        return legalsResponses;
+                    }).toList();
     }
 }
